trying to start again

--- a/index.html
+++ b/index.html
@@ -1,7 +1,78 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en-us">
+
+<head>
+	<meta charset="utf-8">
+    <meta name="author" content="AUTOR">
+	<meta name="description" content="Meta Tags 90 caracteres">
+	<meta name="keywords" content="limite de aproximadamente 150 caracteres">
+    <meta name="robots" content="index,follow">
+	
+	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet">
+<title>DaCaSi Apps</title>
+</head>
+
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages .</p>
+<div id="conteudo"> <!-- INICIO CONTEUDO -->
+<div id="topo"><p>DaCaSi Apps</p></div>
+<div id="menu">
+<nav class="menuu">
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Produtos</a></li>
+		<li><a href="#">Who i am?</a></li>
+		<li><a href="#">Code</a></li>
+		<li><a href="#">Portfolio</a></li>
+	</ul>
+</nav>
+</div>
+<div id="conteudoint">
+
+<script type="text/javascript">
+
+function randa() {
+};
+randa = new randa();
+number = 0;
+// keep adding these for more random items
+randa[number++] = '<div id="rand1">Content for  id "rand1" Goes Here</div>'
+randa[number++] = '<div id="rand2">Content for  id "rand2" Goes Here</div>'
+randa[number++] = '<div id="rand3">Content for  id "rand3" Goes Here</div>'
+randa[number++] = '<div id="rand4">Content for  id "rand4" Goes Here</div>'
+randa[number++] = '<div id="rand5">Content for  id "rand5" Goes Here</div>'
+increment = Math.floor(Math.random() * number);
+document.write(randa[increment]);
+//-->
+</script>
+
+<p>
+	Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.
+
+	I have been in the field of programming since 2011, and I have developed a solid foundation in HTML, CSS, JavaScript, and PHP. I am constantly seeking new opportunities to learn and improve my skills.
+	
+	On my website, you will find examples of my work, including projects I have completed and my thoughts, experiences and tips on programming and app development.
+	
+	As a beginner, I understand the importance of continuous learning and I am dedicated to staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients, and I am confident in my ability to deliver quality work.
+	
+	If you're looking for a dedicated and hard-working programmer, I would love the opportunity to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
+</p>
+
+
+</div>
+<div id="rodape"><a href="#">Title <span>Tooltip</span></a> </div> 
+</div>
+
+
+
+
+
+
+</div><!--  -->
+   
+ 
+<script async src="js/script.js"></script>  
 </body>
+
 </html>
