--- a/index.html
+++ b/index.html
@@ -48,16 +48,13 @@ document.write(randa[increment]);
 </script>
 
 <p>
-	Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.
-
-	I have been in the field of programming since 2011, and I have developed a solid foundation in HTML, CSS, JavaScript, and PHP. I am constantly seeking new opportunities to learn and improve my skills.
+	Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.<br>
+	As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.<br>
+	On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development. <br>
+	As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work. <br>
+	If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
+	</p>
 	
-	On my website, you will find examples of my work, including projects I have completed and my thoughts, experiences and tips on programming and app development.
-	
-	As a beginner, I understand the importance of continuous learning and I am dedicated to staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients, and I am confident in my ability to deliver quality work.
-	
-	If you're looking for a dedicated and hard-working programmer, I would love the opportunity to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
-</p>
 
 
 </div>
