--- a/index.html
+++ b/index.html
@@ -1,75 +1,83 @@
-<!DOCTYPE HTML>
-<html lang="en-us">
 
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-    <meta name="author" content="AUTOR">
-	<meta name="description" content="Meta Tags 90 caracteres">
-	<meta name="keywords" content="limite de aproximadamente 150 caracteres">
-    <meta name="robots" content="index,follow">
-	
-	<link rel="stylesheet" href="css/style.css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet">
-<title>DaCaSi Apps</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DaCaSi Apps</title>
+    <meta name="description" content="test opengraph anfd facebook api">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="fb:app_id" content="141676222709786" />
+    <meta property="og:url" content="http://">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Facebook Share Example">
+    <meta property="og:description" content="test opengraph anfd facebook api">
+    <meta property="og:image" content="http:///image.jpg">
+    <meta property="og:image:alt" content="A description of my image" />
+  
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="pesquisa.infinityfreeapp.com">
+    <meta property="twitter:url" content="http://">
+    <meta name="twitter:title" content="Facebook Share Example">
+    <meta name="twitter:description" content="test opengraph anfd facebook api">
+    <meta name="twitter:image" content="http:///image.jpg">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-
-
 <body>
-<div id="conteudo"> <!-- INICIO CONTEUDO -->
-<div id="topo"><p>DaCaSi Apps</p></div>
-<div id="menu">
-<nav class="menuu">
-	<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Produtos</a></li>
-		<li><a href="#">Who i am?</a></li>
-		<li><a href="#">Code</a></li>
-		<li><a href="#">Portfolio</a></li>
-	</ul>
-</nav>
-</div>
-<div id="conteudoint">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">DaCaSi Apps</a>
 
-<script type="text/javascript">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-function randa() {
-};
-randa = new randa();
-number = 0;
-// keep adding these for more random items
-randa[number++] = '<div id="rand1">Content for  id "rand1" Goes Here</div>'
-randa[number++] = '<div id="rand2">Content for  id "rand2" Goes Here</div>'
-randa[number++] = '<div id="rand3">Content for  id "rand3" Goes Here</div>'
-randa[number++] = '<div id="rand4">Content for  id "rand4" Goes Here</div>'
-randa[number++] = '<div id="rand5">Content for  id "rand5" Goes Here</div>'
-increment = Math.floor(Math.random() * number);
-document.write(randa[increment]);
-//-->
-</script>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto"> 
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Portfolio</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Privacy Policy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link 4</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>  
+    </header>
 
-<p>
-	Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.<br>
-	As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.<br>
-	On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development. <br>
-	As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work. <br>
-	If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
-	</p>
-	
+    <main class="container">
+        <p id="update"></p>
 
+        <span>
+            Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.
+            As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.
+            On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development.
+            As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work.
+            If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
+        </span>
+        </main>
 
-</div>
-<div id="rodape"><a href="#">Title <span>Tooltip</span></a> </div> 
-</div>
+    <footer class="footer mt-auto py-3 bg-light">
+        <div class="container">
+            <span class="text-muted">© 2024 DaCaSi Apps</span>
+        </div>
+    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-
-
-
-
-</div><!--  -->
    
- 
-<script async src="js/script.js"></script>  
 </body>
-
 </html>
