--- a/contato.html
+++ b/contato.html
@@ -41,16 +41,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto"> 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Portfolio</a> 
+                            <a class="nav-link active" href="index.html">Home</a> 
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Privacy Policy</a>
+                            <a class="nav-link" href="privacy.html">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 4</a>
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                     </ul>
                 </div>
@@ -59,20 +59,14 @@
     </header>
 
     <main class="container">
-        <p id="update"></p>
+        <p id="update">contato</p>
 
-        <span>
-            Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.
-            As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.
-            On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development.
-            As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work.
-            If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
-        </span>
+    
         </main>
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© 2024 DaCaSi Apps</span>
+            <span class="text-muted">© 2024 DaCaSi Apps</span><span><a class="link" href="privacy.html">Privacy Policy</a></span>
         </div>
     </footer>
 
