--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -41,16 +42,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto"> 
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Portfolio</a> 
+                            <a class="nav-link active" href="#">Home</a> 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Privacy Policy</a>
+                            <a class="nav-link" href="privacy.html">Privacy Policy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 4</a>
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                     </ul>
                 </div>
@@ -70,9 +71,41 @@
         </span>
         </main>
 
+<div class="hhhh row d-flex align-items-center justify-content-center">
+
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Título do card1</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+          <a href="#" class="btn btn-primary">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Título do card2</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+          <a href="#" class="btn btn-primary">Visitar</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <div class="card-body">
+          <h5 class="card-title">Título do card3</h5>
+          <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+          <a href="#" class="btn btn-primary">Visitar</a>
+        </div>
+      </div>
+      
+
+</div>
+
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© 2024 DaCaSi Apps</span>
+           <span class="text-muted">© 2024 DaCaSi Apps</span> <span><a class="link" href="privacy.html">Privacy Policy</a></span>
         </div>
     </footer>
 
