--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
     <main class="container">
         <p id="update"></p>
 
-        <span>
-            Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.
-            As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.
-            On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development.
-            As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies. I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work.
-            If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.
+        <span class="text-justify">
+            <p>Welcome to dacasi apps, my name is Daniel and I am a beginner programmer with a strong passion for creating innovative and user-friendly websites and applications.</p>
+            <p>As a beginner programmer, I have been developing my skills in HTML, CSS, JavaScript, and PHP since 2011. I am constantly seeking new opportunities to learn and improve my skills in programming and app development.</p>
+            <p>On my website, you can find examples of my work, including projects I have completed and my thoughts, experiences, and tips on programming and app development.</p>
+            <p> As a beginner, I understand the importance of continuous learning and staying up-to-date with the latest programming trends and technologies.</p><p> I am open to working with a diverse range of clients and I am confident in my ability to deliver quality work.</p>
+                <p>If you're looking for a dedicated and hard-working programmer, I would love to discuss your project with you. Please don't hesitate to contact me for more information or to discuss your project further.</p>
         </span>
         </main>
 
 <div class="hhhh row d-flex align-items-center justify-content-center">
 
     <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/icons8-globo-100.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Título do card1</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/icons8-globo-100.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Título do card2</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
@@ -92,7 +92,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+        <img class="card-img-top" src="img/icons8-globo-100.png" alt="Imagem de capa do card">
         <div class="card-body">
           <h5 class="card-title">Título do card3</h5>
           <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
